# klipwerk

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  klipwerk-demo.html  pyproject.toml  run.pyw
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
klipwerk/: __init__.py  __main__.py  app.py  history.py  settings.py  sidebar.py
klipwerk/core/: __init__.py  export_builder.py  ffmpeg_runner.py  formats.py  models.py  probe.py
klipwerk/ui/: __init__.py  icons.py  theme.py
klipwerk/widgets/: __init__.py  clip_item.py  guarded.py  helpers.py  preview.py  scrubber.py  seq_preview.py
klipwerk/workers/: __init__.py  ffmpeg_worker.py  thumbnail.py  waveform.py
tests/: test_app_smoke.py  test_export_builder.py  test_ffmpeg_runner.py  test_formats.py  test_history.py  test_sequence_planner.py  test_settings.py  test_waveform.py
