[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klipwerk"
version = "0.2.0"
description = "Fast, keyboard-driven desktop video editor built around ffmpeg."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Reaaaaa" },
]
keywords = ["video", "editor", "ffmpeg", "crop", "trim", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
]
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "PyQt6-sip>=13.6.0",
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.scripts]
klipwerk = "klipwerk.__main__:main"

[project.urls]
Homepage = "https://github.com/Reaaaaa/klipwerk"
Repository = "https://github.com/Reaaaaa/klipwerk"
Issues = "https://github.com/Reaaaaa/klipwerk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["klipwerk*"]
exclude = ["tests*", "work*"]

# ── pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:cv2",
]

# ── ruff: linting + formatting ─────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear (common anti-patterns)
    "UP",   # pyupgrade
    "SIM",  # simplify
    "C4",   # comprehensions
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line length handled by formatter
    "E701",    # compact single-statement on same line (after `if:` etc.) — intentional in Qt UI setup
    "E702",    # compact semicolon one-liners (e.g. `sp.blockSignals(True); sp.setValue(v); sp.blockSignals(False)`)
    "B008",    # function calls in defaults — common in Qt connect()
    "SIM108",  # ternary preferences
    "SIM105",  # `contextlib.suppress` vs `try/except/pass` — either is fine
    "RUF001",  # ambiguous unicode in strings — we use × ─ — deliberately in labels
    "RUF002",  # ambiguous unicode in docstrings
    "RUF003",  # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "B017"]

# ── mypy ───────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
ignore_missing_imports = true   # PyQt6, cv2 have no shipped stubs
